[project]

name = "filet"
version = "0.0.0"

authors = ["Georges Dubus <georges.dubus@compiletoi.net>"]

[dependencies.piston]

git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.sdl2_game_window]

git = "https://github.com/pistondevelopers/sdl2_game_window.git"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics.git"
